# sibcom2

./: .travis.yml  Cargo.toml  Dockerfile  Makefile  README.md  fastly.toml  site.yaml
.cargo/: config.toml
.circleci/: config.yml
assets/: script.js  style.css
bmon/: Cargo.toml
bmon/src/: cookies.rs  deserialize.rs  handler.rs  html.rs  lib.rs
generator/: Cargo.toml
generator/src/: error.rs  lib.rs  load.rs  routes.rs  serialize.rs
generator/src/testdata/: site.yaml
minify/: Cargo.toml
minify/src/: lib.rs
server/: Cargo.toml  build.rs
server/src/: handler.rs  main.rs
updater/: Cargo.toml
updater/src/: blog.rs  client.rs  cohost.rs  commits.graphql  github-query.graphql  github.rs  lib.rs  location.rs  main.rs  mastodon.rs
