[package]
name = "bmon"
description = "Beta's Magical Object Notation"
version = "0.1.0"
authors = ["Ellie Frost <web@stillinbeta.com>"]
edition = "2018"

[lib]
doctest = false

[dependencies]
quote = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
htmlescape = "0.3"
url = "2.2"
proc-macro2 = "0.4"
serde_yaml = "0.8"
minify = { path = "../minify" }

