[package]
name = "generator"
version = "0.1.0"
authors = ["Ellie Frost <web@stillinbeta.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "0.6.1"
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }
proc-macro2 = "0.4"
bmon = { path = "../bmon" }
syn = { version = "0.15.29", features = ["parsing"] }

[dev-dependencies]
maplit = "1.0.1"