[package]
name = "generator"
version = "0.1.0"
authors = ["Ellie Frost <web@stillinbeta.com>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0"
quote = "1.0"
serde_yaml = "0.8"
serde-tuple-vec-map = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
proc-macro2 = "1.0"
bmon = { path = "../bmon" }
syn = { version = "2.0", features = ["parsing"] }