[package]
name = "updater"
version = "0.1.0"
authors = ["Ellie Frost <web@stillinbeta.com>"]
edition = "2018"

[dependencies]
redis = "0.10.0"
envy = "0.4"
slog = "2.4.1"
slog-term = "2.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# location.rs
locationsharing = "0.1.2"
bingmaps = "0.0.3"
itertools = "0.8.0"

# github.rs 
reqwest = "0.9.13"

# mastodon.rs
mammut = "0.12.0"
dissolve = "0.2.2"