[package]
name = "updater"
version = "0.1.0"
authors = ["Ellie Frost <web@stillinbeta.com>"]
edition = "2021"

[dependencies]
redis = "0.10.0"
envy = "0.4"
slog = "2.4.1"
slog-term = "2.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# github.rs
reqwest = { version = "0.11.13", features = ["blocking", "json"] }

# mastodon.rs
mammut = "0.12.0"
dissolve = "0.2.2"
itertools = "0.8.0"

# cohost.rs
rss = "2.0.1"