[package]
name = "updater"
version = "0.1.0"
authors = ["Ellie Frost <web@stillinbeta.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
redis = "0.24"
envy = "0.4"
slog = "2.4.1"
slog-term = "2.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.11.13", features = ["blocking", "json"] }
rss = "2.0.1"
scraper = "0.18.1"